Prevent user-dropdown from growing off screen and making a scrollbar.

--- a/src/css/legacy/channel.scss
+++ b/src/css/legacy/channel.scss
@@ -887,6 +887,7 @@ div#plmeta {
 .user-dropdown {
   min-width: 250px !important;
   width: 250px;
+  right: 0;
   .actions {
     width: 100%;
     .btn {
